src/test/testCases/semanticErrors/duplicateInputPin.moore
moore M1 {
    states {a1, a2}

    input {
        pins {
            clock:  10,
            p1: 11,
            p1: 12
        }

        transition {}
    }

    output {
        pins {}

        function {}
    }
}
